# memcc

./: CMakeLists.txt  README.md
include/memcc/: memcc.h  memcc_block.h  memcc_stack.h
tests/: CMakeLists.txt  dfstack.c  nmstack.c  sbblock.c
